<resources>
    <string name="app_name">Canteen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">Корзина</string>
    <string name="orders">Заказы</string>
    <string name="exit">Выход</string>
    <string name="orderRegistration">Оформление заказа</string>
    <string name="title_activity_main_client">MainClientActivity</string>
    <string name="title_home">Home</string>
    <string name="Client">Клиент</string>
    <string name="Worker">Работник</string>
    <string name="Basket">Корзина</string>
    <string name="Orders">Заказы</string>
    <string name="FIO">ФИО</string>
    <string name="PhoneNumber">Номер телефона</string>
    <string name="Address">Адрес:</string>
    <string name="registration">Регистрация</string>
    <string name="listOfCanteens">Список столовых</string>
    <string name="canteenMenu">Меню</string>
    <string name="dish">Блюдо</string>
    <string name="PriceDish">Цена: </string>
    <string name="AddToBasket">Добавить в корзину</string>
    <string name="dishTitle">Название:</string>
    <string name="listOfOrders">Список заказов</string>
    <string name="OrderInformation">Информация о заказе:</string>
    <string name="orderNumber">Номер заказа</string>
    <string name="orderTime">Время заказа:</string>
    <string name="dishCount">Количесто блюд:</string>
    <string name="ruble">руб</string>
    <string name="basketIsNull">Ваша корзина пуста</string>
    <string name="goToOrderRegistration">К оформлению заказа</string>
    <string name="order">Оформить заказ</string>
    <string name="clientFIO">ФИО клиента:</string>
    <string name="clientPhoneNumber">Номер телефона клиента:</string>
    <string name="orderList">Состав заказа:</string>
    <string name="orderStatus">Статус заказа:</string>
    <string name="deliveryman">Доставку производит:</string>
    <string name="cook">Повар:</string>
    <string name="amountPayable">Сумма к оплате:</string>
</resources>
