<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.Client.ClientRegistrationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/etFIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FIO"
            android:inputType = "textPersonName"
            />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber"
            android:layout_marginTop="10dp"
            android:inputType = "number"
            />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Address"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</LinearLayout>